# thesis

./: .gitignore
paper/: cc-ext.sty  eric.bib  outline.txt  paper.bib  paper.tex  types.sty  varsem.sty
vimp-hs/: README.md  vimp-hs.cabal
vimp-hs/src/: Dim.hs  V.hs
vimp-hs/src/PlainVimp/: Expr.hs  Stmt.hs
vimp-idr/: CatchStmt.idr  Dim.idr  Env.idr  Expr.idr  NewDim.idr  NewSat.idr  PlainStmt.idr  Sat.idr  ThrowStmt.idr  V.idr  VCatchStmt.idr  sat.c  sat.h  vimp.ipkg
