name:                vimp-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/vimp-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  FlexibleInstances
                     , FlexibleContexts
  exposed-modules:     Lib
                     , V
                     , Dim
  build-depends:       base
                     , containers
                     , text
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vimp-hs
